# okaeri-configs-rs

./: .gitignore  Cargo.toml  LICENSE
crates/okaeri-configs-core/: Cargo.toml
crates/okaeri-configs-core/src/: config.rs  error.rs  lib.rs  manager.rs  metadata.rs  middleware.rs  options.rs
crates/okaeri-configs-core/src/formats/: common.rs  format.rs  json.rs  merge.rs  mod.rs  toml.rs  yaml.rs
crates/okaeri-configs-derive/: Cargo.toml
crates/okaeri-configs-derive/src/: attrs.rs  codegen.rs  lib.rs
examples/: basic.rs
src/: lib.rs
tests/: config_test.rs
