[package]
name = "okaeri-configs"
version = "0.0.1"
edition = "2024"
authors = ["CoolLoong"]
license = "MIT"
repository = "https://github.com/CoolLoong/okaeri-configs-rs"
description = "A flexible configuration library for Rust, inspired by okaeri-configs"
readme = "README.md"
keywords = ["config", "configuration", "toml", "json", "yaml"]
categories = ["config"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["CoolLoong"]
license = "MIT"
repository = "https://github.com/CoolLoong/okaeri-configs-rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.7"
toml_edit = "0.23.6"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0.17"
okaeri-configs-core = { path = "crates/okaeri-configs-core" }
okaeri-configs-derive = { path = "crates/okaeri-configs-derive" }

[dependencies]
okaeri-configs-core = { workspace = true }
serde = { workspace = true }

[features]
default = ["all"]
toml = ["okaeri-configs-core/toml"]
json = ["okaeri-configs-core/json"]
yaml = ["okaeri-configs-core/yaml"]
all = ["json", "toml", "yaml"]

[dev-dependencies]
serde = { workspace = true }
ctor = "0.5"
temp-env = "0.3"

[[example]]
name = "basic"
required-features = ["all"]